Emails in Years ago filter

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <li class="active"><a href="#/">Home</a></li>
                     <li><a href="#/settings">Settings</a></li>
                     <li><a href="#">Contact</a></li>
-            
+
                 </ul>
 
             </div>
@@ -56,7 +56,7 @@
         </div>
     </nav>
     <!--    END NAVBAR-->
-
+        <span ng-show="loading">Loading......</span>
     <div ng-view></div>
 
 
@@ -71,6 +71,7 @@
     <script src="js/angular/angular.min.js"></script>
     <script src="js/angular/angular-route.min.js"></script>
     <script src="js/angular/app.js"></script>
+    <script src="js/angular/controllers/home.js"></script>
     <script src="js/angular/controllers/home.js"></script>
 
     <script src="js/main.js"></script>
