--- a/index.html
+++ b/index.html
@@ -41,14 +41,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Project name</a>
+                <a class="navbar-brand" href="#">ng-Mail</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#/">Home</a></li>
-                    <li><a href="#/settings">Settings</a></li>
-                    <li><a href="#">Contact</a></li>
-
+                    <li class="active"><a href="#/">Inbox</a></li>
                 </ul>
 
             </div>
@@ -56,8 +53,8 @@
         </div>
     </nav>
     <!--    END NAVBAR-->
-        <span ng-show="loading">Loading......</span>
-    <div ng-view></div>
+    <span ng-show="loading">Loading......</span>
+    <div class="main-container" ng-view></div>
 
 
     <!-- /container -->
